--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -1,9 +1,10 @@
 build:
 	hugo -D > /dev/null 2>&1
 
+.PHONY: clean
 clean:
-	rm -r ./dist/* /dev/null 2>&1
+	rm -rf ./dist/* /dev/null 2>&1
 
 post:
 	hugo new posts/$(POST_NAME).md 
-	echo "--- \ntitle: \"$(POST_TITLE)\" \ndraft: false\n---" > ./content/posts/$(POST_NAME).md
+	echo "--- \ntitle: \"$(POST_TITLE)\"\ndate: 2022-01-20T08:47:25+01:00 \ndraft: false\n---" > ./content/posts/$(POST_NAME).md
