--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -3,8 +3,8 @@ build:
 
 .PHONY: clean
 clean:
-	rm -rf ./dist/* /dev/null 2>&1
+	rm -rf ./dist/ /dev/null 2>&1
 
 post:
 	hugo new posts/$(POST_NAME).md 
-	echo "--- \ntitle: \"$(POST_TITLE)\"\ndate: 2022-01-20T08:47:25+01:00 \ndraft: false\n---" > ./content/posts/$(POST_NAME).md
+	echo '--- \ntitle: "$(POST_TITLE)"\ndate: 2022-01-20T08:47:25+01:00 \ndraft: false\n---' > ./content/posts/$(POST_NAME).md
