--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -6,4 +6,4 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: cp -r ./module2_task5/ ./module3_task0
+      - run: cp -r ./module2_task5 ./module3_task0
