--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: ls -la
-      - run: cd ..
+      - run: cd /home/runner/work/validation
       - run: ls -la
