--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -7,5 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: ls -la
+      - run: pwd
       - run: cd /home/runner/work/validation
+      - run: pwd
       - run: ls -la
