--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -8,4 +8,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+      - run: cp -r ./module2_task5/ ./module3_task0
       - run: ls -la
+      - run: ls -la ./module3_task0
+      - run: git push origin main
