--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -8,9 +8,5 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - run: cp -r ./module2_task5/ ./module3_task0
-      - run: ls -la
-      - run: ls -la ./module3_task0
-      - run: git add .
-      - run: git commit -m "crear modulo3_task0"
-      - run: git push origin main
+      - run: cd ./module3_task0
+      - run: make help
