--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - run: cd ./module3_task0
-      - run: make help
+      - run: ls -la
