--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -10,4 +10,5 @@ jobs:
         uses: actions/checkout@v2
       - name: moviendonos a module3_task0
         working-directory: ./module3_task0
-      - run: make help
+        run: make help
+      - run: ls -la
