--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -1,7 +1,12 @@
 
 
 name: GitHub Actions Demo
-on: [push]
+on: 
+  push:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 5,17 * * *'
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
