--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -8,7 +8,8 @@ on:
     - cron:  '30 5,17 * * *'
 
 jobs:
-  Explore-GitHub-Actions:
+  yamllint:
+    name: 'Yamllint'
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
