--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: module3_task0
 on:
   push:
   schedule:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   yamllint:
-    name: 'Yamllint'
+    name: 'module3_task0'
     runs-on: ubuntu-latest
     steps:
       - name: 'Check out repository code'
