--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -17,5 +17,5 @@ jobs:
         working-directory: ./module3_task1
         run: make help
       - run: sudo curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.43.0
-      - run: golangci-lint version
+      - run: golangci-lint --version
 
