--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -17,5 +17,7 @@ jobs:
         working-directory: ./module3_task1
         run: make help
       - run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.43.0
+      - run: sudo apt install golang-go
+      - run: go version
       - run: golangci-lint --version
 
