--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -16,8 +16,8 @@ jobs:
       - name: 'moviendonos a module3_task1'
         working-directory: ./module3_task1
         run: make help
-      - run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.43.0
       - run: sudo apt install golang-go
+      - run: sudo go get -u github.com/golangci/golangci-lint/cmd/golangci-lint@v1.44.0
       - run: go version
       - run: golangci-lint --version
 
