--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -7,7 +7,7 @@ on:
     - cron: '30 5,17 * * *'
 
 jobs:
-  golangci:
+  yamllint:
     name: 'module3_task1'
     runs-on: ubuntu-18.04
     steps:
@@ -21,7 +21,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-          version: v1.29
+          golangci-lint-version: v1.29
       - name: 'moviendonos a module3_task1'
         working-directory: ./module3_task1
         run: sh ./setup.sh
