--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           go-version: '1.17.6' # The Go version to download (if necessary) and use.
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
+        uses: actions/setup-golangci-lint@v2
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-          golangci-lint-version: v1.29
+          version: v1.29
       - name: 'moviendonos a module3_task1'
         working-directory: ./module3_task1
         run: sh ./setup.sh
