--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -20,7 +20,18 @@ jobs:
       - name: 'moviendonos a module3_task1'
         working-directory: ./module3_task1
         run: sh ./setup.sh
-      - run: go version
-      - run: hugo version
-      - run: golangci-lint version
-
+      - name: 'moviendonos a module3_task1'
+        working-directory: ./module3_task1
+        run: make lint
+      - name: 'moviendonos a module3_task1'
+        working-directory: ./module3_task1
+        run: make build
+      - name: 'moviendonos a module3_task1'
+        working-directory: ./module3_task1
+        run: make unit-tests
+      - name: 'moviendonos a module3_task1'
+        working-directory: ./module3_task1
+        run: make validate
+      - name: 'moviendonos a module3_task1'
+        working-directory: ./module3_task1
+        run: make integration-tests
