--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -15,7 +15,7 @@ jobs:
       - name: install go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.17.6' # The Go version to download (if necessary) and use.
+          go-version: '1.17.6'
       - name: 'moviendonos a module3_task1'
         working-directory: ./module3_task1
         run: sh ./setup.sh
