--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -11,6 +11,7 @@ jobs:
     name: 'module3_task1'
     runs-on: ubuntu-18.04
     steps:
+      - uses: ./.github/actions/my-action
       - name: 'Check out repository code'
         uses: actions/checkout@v2
       - name: install go
