--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -5,12 +5,23 @@ on:
     # * is a special character in YAML so you have to quote this string
     - cron: '30 5,17 * * *'
   workflow_call:
+    inputs:
+      username:
+        required: true
+        type: string
+    secrets:
+      token:
+        required: true
 
 jobs:
   yamllint:
     name: 'module3_task1'
     runs-on: ubuntu-18.04
     steps:
+      - uses: ./.github/actions/my-action
+        with:
+          username: ${{ inputs.username }}
+          token: ${{ secrets.token }}
       - name: 'Check out repository code'
         uses: actions/checkout@v2
       - name: install go
