--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -1,5 +1,9 @@
 name: module3_task2
 on:
+  push:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: '30 5,17 * * *'
   pull_request:
     branches:
       - main
