--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
    call-workflow-passing-data:
-    uses: octo-org/example-repo/.github/workflows/workflow-B.yml@main
+    uses: danieltendero/validation/.github/workflows/module3_task1.yml@main
     with:
       username: mona
     secrets:
