--- a/module3_task2/Makefile
+++ b/module3_task2/Makefile
@@ -53,7 +53,7 @@ test: ## Realiza un test para comprobar que la aplicacion hace lo que debe hacer
 	make unit-tests
 
 package: ## comprimir proyecto
-	zip -r proyectoComprimido.zip awesome-api dist/*
+	zip -r awesome-website.zip awesome-api dist/*
 
 
 
