--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -42,4 +42,8 @@ jobs:
         working-directory: ./module3_task3
         run: make package
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v1.0.0
+        with:
+          files: ./module3_task2/awesome-website.zip
+        env:
+          GITHUB_REPOSITORY: danieltendero/validation/module3_task3@v1.0.0
