--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -41,6 +41,10 @@ jobs:
       - name: 'moviendonos a module3_task3'
         working-directory: ./module3_task3
         run: make package
+      - name: 'ls'
+        run: ls -la
+      - name: 'tree'
+        run: tree
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
