--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -47,4 +47,4 @@ jobs:
           files: ./module3_task3/awesome-website.zip
           tag_name: 'v1.0.0'
         env:
-          GITHUB_REPOSITORY: danieltendero/validation/module3_task3@v1.0.0
+          GITHUB_REPOSITORY: danieltendero/validation/module3_task3/DEPLOY.md
