--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -44,5 +44,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./module3_task3/awesome-website.zip
+          files: |
+            ./module3_task3/awesome-website.zip
+            ./module3_task3/DEPLOY.md
           tag_name: 'v1.0.0'
