--- a/.github/workflows/module3_task4.yml
+++ b/.github/workflows/module3_task4.yml
@@ -5,6 +5,7 @@ on:
       - main
     tags:
       - "v*.*.*"
+  pull_request:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: '30 5,17 * * *'
