--- a/.github/workflows/module3_task4.yml
+++ b/.github/workflows/module3_task4.yml
@@ -6,6 +6,8 @@ on:
     tags:
       - "v*.*.*"
   pull_request:
+    branches:
+      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: '30 5,17 * * *'
